# substance-3d-connector

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
cli/: CMakeLists.txt  main.py  requirements.txt
core/: CMakeLists.txt
core/bindings/haskell/: substance_connector.hs
core/bindings/java/: CMakeLists.txt  README.md
core/bindings/java/src/details/: connector_java.c
core/bindings/qml/: connector_qml.cpp  connector_qml.hpp  connector_qml.pro  main.qml  qmldir
core/bindings/ruby/: CMakeLists.txt
core/bindings/ruby/src/: connector_ruby.c
core/bindings/sbcl_lisp/: substance-connector.lisp
core/bindings/tcl/: Makefile  pkgIndex.tcl
core/bindings/tcl/src/: connector_tcl.c
core/include/substance/connector/: common.h  connector.h  errorcodes.h  types.h
core/include/substance/connector/details/: atomic.h  available_queue.h  callbacks.h  communication.h  configuration.h  connection.h  connection_details.h  connection_utils.h  context_queue.h  context_struct.h  disconnect_message.h  dispatch.h  internal_messages.h  internal_uuids.h  locked_queue.h  memory.h  message.h  message_header.h  message_queue.h  state.h  string_map.h  string_utils.h  thread.h  uint_queue.h  uuid_utils.h
core/include/substance/connector/details/network/: autoconnect.h  openconnectionimpl.h  readwriteutils.h
core/include/substance/connector/details/system/: connectiondirectory.h  fileutils.h  pathstringdetails.h  pathtype.h  pathutils.h
core/include/substance/connector/details/threadimpl/: read_threads.h  readstructimpl.h  readthreadimpl.h  write_threads.h
core/scripts/jenkins/: jenkins.py
core/scripts/utils/: gen_uuid  run_tests.py
core/src/: external_api.c  version.rc.in
core/src/details/: available_queue.c  callbacks.c  communication.c  configuration.c  connection.c  connection_unix.c  connection_utils.c  connection_windows.c  context_queue.c  disconnect_message.c  dispatch.c  internal_messages.c  internal_uuids.c  locked_queue.c  memory.c  message.c  message_queue.c  state.c  string_map.c  string_utils.c  thread_unix.c  thread_windows.c  uint_queue.c  uuid_utils.c
core/src/details/network/: autoconnect.c  openconnectionimpl.c  readwriteutils.c
core/src/details/system/: connectiondirectory.c  fileutils.c  pathutils.c
core/src/details/threadimpl/: read_threads.c  readstructimpl.c  readthreadimpl.c  write_threads.c
core/test/unit_test/: CMakeLists.txt
core/test/unit_test/01_test_init/: CMakeLists.txt  test.c
core/test/unit_test/02_test_uuid/: CMakeLists.txt  test.c
core/test/unit_test/03_test_allocator/: CMakeLists.txt  test.c
core/test/unit_test/04_test_create_message/: CMakeLists.txt  test.c
core/test/unit_test/05_test_network_utils/: CMakeLists.txt  test.c
core/test/unit_test/06_test_locked_queue/: CMakeLists.txt  test.cpp
core/test/unit_test/07_test_dispatch/: CMakeLists.txt  test.c
core/test/unit_test/08_test_configuration/: CMakeLists.txt  test.c
core/test/unit_test/09_test_trampoline/: CMakeLists.txt  test.c
core/test/unit_test/10_test_atomic/: CMakeLists.txt  test.c
core/test/unit_test/11_test_uint_queue/: CMakeLists.txt  test.c
core/test/unit_test/12_test_available_queue/: CMakeLists.txt  test.c
core/test/unit_test/13_test_message_queue/: CMakeLists.txt  test.c
core/test/unit_test/14_test_allocator_details/: CMakeLists.txt  test.c
core/test/unit_test/15_test_file_utils/: CMakeLists.txt  test.c
core/test/unit_test/16_test_ensure_directories/: CMakeLists.txt  test.c
core/test/unit_test/17_test_context_state/: CMakeLists.txt  test.c
core/test/unit_test/18_test_read_thread_utilities/: CMakeLists.txt  test.c
core/test/unit_test/19_test_read_thread/: CMakeLists.txt  test.c
core/test/unit_test/20_test_open_tcp/: CMakeLists.txt  test.c
core/test/unit_test/common/: test_common.c  test_common.h
module-cpp/: CMakeLists.txt  Doxyfile
module-cpp/cmake/modules/: jsoncpp.cmake
module-cpp/include/substance/connector/framework/: application.h  callbackstype.h  core.h  export.h  system.h  uuid.h
module-cpp/include/substance/connector/framework/details/: callbacks.h  connectionschema.h  dynamicload.h  sendtoschema.h
module-cpp/include/substance/connector/framework/features/: livelink.h  sendmesh.h  sendsbsar.h
module-cpp/include/substance/connector/framework/schemas/: connectionschema.h  sendmeshschema.h  sendtoschema.h
module-cpp/src/: .vimrc
module-cpp/src/framework/: .vimrc  application.cpp  core.cpp  export.cpp  livelink.cpp  system.cpp  uuid.cpp
module-cpp/src/framework/details/: .vimrc  callbacks.cpp  connectionschema.cpp  dynamicload.cpp  sendtoschema.cpp
module-cpp/src/framework/features/: livelink.cpp  sendmesh.cpp  sendsbsar.cpp
module-cpp/src/framework/schemas/: connectionschema.cpp  sendmeshschema.cpp  sendtoschema.cpp
module-cpp/tests/: CMakeLists.txt
module-cpp/tests/01_test_uuid_compare/: CMakeLists.txt  test.cpp
module-cpp/tests/02_test_find_callback/: CMakeLists.txt  test.cpp
module-cpp/tests/03_test_register_export/: CMakeLists.txt  test.cpp
module-cpp/tests/04_test_init_shutdown/: CMakeLists.txt  test.cpp
module-cpp/tests/05_test_uuid_string/: CMakeLists.txt  test.cpp
module-python/: CMakeLists.txt
module-python/include/substance/connector/python/details/: broadcast.h  connection.h  initshutdown.h  methodtable.h  (+3 more)
module-python/lib/: CMakeLists.txt
module-python/lib/substanceconnector/framework/: application.py  assetimport.py  callbacks.py  connectionschema.py  exception.py  instance.py  meshimport.py  message.py  substanceimport.py  system.py  trampoline.py  uuid_utils.py
module-python/lib/substanceconnector/framework/features/: meshimport.py  rawdata.py  sbsarimport.py
module-python/src/: module.c
module-python/src/details/: broadcast.c  connection.c  initshutdown.c  methodtable.c  trampoline.c  uuid.c  version.c
module-qt/: CMakeLists.txt
module-qt/include/substance/connector/qt/: application.h  export.h  module.h  system.h
module-qt/src/: application.cpp  export.cpp  module.cpp  system.cpp
module-qt/src/features/: sendmesh.cpp  sendsbsar.cpp
(+11 files in other folders)
